# MLPUI

./: pyproject.toml
mlpui/: __init__.py  base.py  lightning.py  model.py
mlpui/configs/: tensornet.yaml
mlpui/core/: base_input.py  base_model.py  base_output.py  types.py
mlpui/heads/: __init__.py  properties.py
mlpui/inputs/: __init__.py  knn_graph.py  radius_graph.py  torchmdnet.py
mlpui/mlps/: __init__.py  mace.py  newtonnet.py  tensornet.py
mlpui/models/: __init__.py  newtonnet.py  schnet.py  tensornet.py
mlpui/models/layers/: __init__.py  activations.py  cutoff.py  embedding.py  radial.py
mlpui/nn/: __init__.py  config.py  unified.py  util.py
mlpui/outputs/: __init__.py  charge.py  dipole.py  energy.py
