[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpui"
version = "0.1.0"
description = "interface for Machine Learning Potentials"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "moriya2524", email = "suwako2524@gmail.com"}
]
requires-python = ">=3.10"


dependencies = [
    "torch>=2.0.0",
    "pytorch-lightning>=2.0.0",
    "torch_geometric>=2.0.0",
    "numpy>=1.20.0",
    "pyyaml>=6.0",
]
